# wgpu_rust2

./: Cargo.toml  build.rs
res/shaders/: frag.spv  shader.frag  shader.vert  vert.spv
shadered/: svo_tracing.sprj
shadered/shaders/: MainPS.glsl  MainVS.glsl  svo_tracing_SimplePS.glsl  svo_tracing_SimpleVS.glsl
src/: main.rs  octree.rs
svo_shadered/: svo.sprj
svo_shadered/shaders/: SimpleVS.glsl  svo_SimplePS.glsl
svo_shadered_rewrite/: svo.sprj
svo_shadered_rewrite/shaders/: svo_SimplePS.glsl
