[package]
name = "wgpu_rust2"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
winit = "0.25.0"
wgpu = "0.10.1"
pollster = "0.2.4"
bytemuck = { version = "1.7.2", features = ["derive"] }
cgmath = {version = "0.18.0", features = ["mint"]}
crevice = "0.7.1"
mint = "0.5.6"
glsl-layout = {version = "0.4.0", features = ["cgmath"]}
env_logger = "0.9.0"
log = "0.4.14"